# fcitx-pylogger

./: .gitignore  CMakeLists.txt  README.md
cmake/: cmake_uninstall.cmake.in
data/: CMakeLists.txt  fcitx-pylogger.conf.in  fcitx-pylogger.desc
po/: CMakeLists.txt  POTFILES.in.in  fcitx-pylogger.pot  zh_CN.po
src/: CMakeLists.txt  config.c  eim.c  eim.h
